@@ -1,6 +1,7 @@
 package com.example.passengerservice.service.impl;
 
 import com.example.passengerservice.dto.request.PassengerRatingRequest;
+import com.example.passengerservice.dto.response.AllPassengerRatingsResponse;
 import com.example.passengerservice.dto.response.AveragePassengerRatingResponse;
 import com.example.passengerservice.dto.response.PassengerRatingResponse;
 import com.example.passengerservice.exception.PassengerNotFoundException;
@@ -14,7 +15,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,16 +35,16 @@ public class PassengerRatingServiceImpl implements PassengerRatingService {
     }
 
     @Override
-    public List<PassengerRatingResponse> getRatingsByPassengerId(long passengerId) {
+    public AllPassengerRatingsResponse getRatingsByPassengerId(long passengerId) {
         validatePassengerExists(passengerId);
-        List<PassengerRating> passengerRatings = passengerRatingRepository.getPassengerRatingsByPassengerId(passengerId);
-        if (passengerRatings.isEmpty()) {
-            throw new PassengerRatingNotFoundException(PASSENGER_RATINGS_NOT_FOUND);
-        } else {
-            return passengerRatings.stream()
-                    .map(this::mapPassengerRatingToPassengerRatingResponse)
-                    .collect(Collectors.toList());
-        }
+        List<PassengerRatingResponse> passengerRatings =
+                passengerRatingRepository.getPassengerRatingsByPassengerId(passengerId)
+                        .stream()
+                        .map(this::mapPassengerRatingToPassengerRatingResponse)
+                        .toList();
+        return AllPassengerRatingsResponse.builder()
+                .passengerRatings(passengerRatings)
+                .build();
     }
 
     @Override
@@ -53,23 +53,20 @@ public class PassengerRatingServiceImpl implements PassengerRatingService {
         List<PassengerRating> passengerRatings = passengerRatingRepository.getPassengerRatingsByPassengerId(passengerId);
         if (passengerRatings.isEmpty())
             throw new PassengerRatingNotFoundException(PASSENGER_RATINGS_NOT_FOUND);
-        else {
-            double averageRating = passengerRatings.stream()
-                    .mapToDouble(PassengerRating::getRating)
-                    .average()
-                    .orElse(0.0);
-            return AveragePassengerRatingResponse.builder()
-                    .averageRating(Math.round(averageRating * 100.0) / 100.0)
-                    .passengerId(passengerId)
-                    .build();
-        }
+        double averageRating = passengerRatings.stream()
+                .mapToDouble(PassengerRating::getRating)
+                .average()
+                .orElse(0.0);
+        return AveragePassengerRatingResponse.builder()
+                .averageRating(Math.round(averageRating * 100.0) / 100.0)
+                .passengerId(passengerId)
+                .build();
     }
 
 
     public void validatePassengerExists(long passengerId) {
-        if (!passengerRepository.existsById(passengerId)) {
-            throw new PassengerNotFoundException(PASSENGER_NOT_FOUND);
-        }
+        passengerRepository.findById(passengerId)
+                .orElseThrow(() -> new PassengerNotFoundException(PASSENGER_NOT_FOUND));
     }
 
     public PassengerRating mapPassengerRatingRequestToPassengerRating(PassengerRatingRequest passengerRatingRequest) {
